--- a/Configurator.UI/src/index.html
+++ b/Configurator.UI/src/index.html
@@ -4,22 +4,26 @@
 <head>
     <base href="/">
     
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="assets/assets/favicon.ico" rel="icon" />
     <link href="https://fonts.googleapis.com/css?family=Armata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
 
-    <link href="assets/moldster/css/plugins/animate.css" rel="stylesheet" />
-    <link href="assets/moldster/css/plugins/font-awesome4.2.min.css" rel="stylesheet" />
-    <link href="assets/moldster/css/plugins/fontawesome.min.css" rel="stylesheet" />
-    <link href="assets/moldster/css/plugins/primeicons.css" rel="stylesheet" />
-    <link href="assets/moldster/css/plugins/primeng.min.css" rel="stylesheet" />
-    <link href="assets/moldster/css/plugins/quill.core.css" rel="stylesheet" />
-    <link href="assets/moldster/css/plugins/quill.snow.css" rel="stylesheet" />
-    
-    <link href="assets/moldster/css/gif-loader.css" rel="stylesheet" />
+    <link href="assets/css/plugins/animate.css" rel="stylesheet" />
+    <link href="assets/css/plugins/font-awesome4.2.min.css" rel="stylesheet" />
+    <link href="assets/css/plugins/fontawesome.min.css" rel="stylesheet" />
+    <link href="assets/css/plugins/primeicons.css" rel="stylesheet" />
+    <link href="assets/css/plugins/primeng.min.css" rel="stylesheet" />
+    <link href="assets/css/plugins/quill.core.css" rel="stylesheet" />
+    <link href="assets/css/plugins/quill.snow.css" rel="stylesheet" />
+    <link href="assets/css/gif-loader.css" rel="stylesheet" />
 
-    <link href="assets/moldster/css/chiller-check.css" rel="stylesheet" />
-    <link href="assets/moldster/css/treeStyle.css" rel="stylesheet" />
+    <link href="assets/dist/vendor.css" rel="stylesheet" />
+    <link href="assets/css/chiller-check.css" rel="stylesheet" />
+    <link href="assets/css/treeStyle.css" rel="stylesheet" />
 </head>
 
 <body>
