login is going to server

--- a/Configurator.UI/src/index.html
+++ b/Configurator.UI/src/index.html
@@ -21,7 +21,6 @@
     <link href="assets/css/plugins/quill.snow.css" rel="stylesheet" />
     <link href="assets/css/gif-loader.css" rel="stylesheet" />
 
-    <link href="assets/dist/vendor.css" rel="stylesheet" />
     <link href="assets/css/chiller-check.css" rel="stylesheet" />
     <link href="assets/css/treeStyle.css" rel="stylesheet" />
 </head>
@@ -30,7 +29,10 @@
     <app>
         <div class="loader"></div>
     </app>
-    <script src="assets/moldster/js/jquery-2.1.1.js"></script>
+    <script src="assets/js/jquery-2.1.1.js"></script>
+    <script src="assets/js/jquery-2.1.1.js"></script>
+    <script src="assets/js/jquery.slimscroll.min.js"></script>
+    <script src="assets/js/jquery.Jcrop.min.js"></script>
 </body>
 
 </html>
