--- a/Configurator.UI/src/index.html
+++ b/Configurator.UI/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <base href="/">
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -33,6 +33,9 @@
     <script src="assets/js/jquery-2.1.1.js"></script>
     <script src="assets/js/jquery.slimscroll.min.js"></script>
     <script src="assets/js/jquery.Jcrop.min.js"></script>
+    <script>
+        var server = {};
+    </script>
 </body>
 
 </html>
