--- a/Configurator.UI/src/index.html
+++ b/Configurator.UI/src/index.html
@@ -23,6 +23,10 @@
 
     <link href="assets/css/chiller-check.css" rel="stylesheet" />
     <link href="assets/css/treeStyle.css" rel="stylesheet" />
+
+    <link href="assets/css/plugins/bootstrap.css" rel="stylesheet" />
+    <link href="assets/moldster/css/moldster.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
